--- a/Download_and_parse_Audio_Dataset.ipynb
+++ b/Download_and_parse_Audio_Dataset.ipynb
@@ -38,30 +38,30 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Input credentials\n",
+        "# @title Credentials\n",
         "\n",
-        "s3_key = 'value' # @param {type:\"string\"}\n",
-        "s3_secret = 'value' # @param {type:\"string\"}\n",
-        "s3_root_path = 'value' # @param {type:\"string\"}\n",
-        "youtube_apikey = 'value' # @param {type:\"string\"}"
+        "s3_key = '' # @param {type:\"string\"}\n",
+        "s3_secret = '' # @param {type:\"string\"}\n",
+        "youtube_apikey = '' # @param {type:\"string\"}"
       ],
       "metadata": {
         "id": "UxpdvOjOHeKu"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# @title Youtube playlist info\n",
+        "s3_root_path = 'youtube-dataset/v0' # @param {type:\"string\"}\n",
         "s3_output_folder=\"luo/ramogi_tv\" # @param {type:\"string\"}\n",
         "playlist_url = 'https://www.youtube.com/playlist?list=UULFmKXJ4C59JjVVJ-axXfpJcg' # @param {type:\"string\"}"
       ],
       "metadata": {
         "id": "6GO0Env_Lc0N"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -75,11 +75,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "QmCISupc9hiW"
+        "id": "QmCISupc9hiW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "73e50239-9ba9-4d9c-aacf-ca666382d605"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/fsspec/spec.py:79: FutureWarning: S3FileSystem is deprecated and will be removed in the next major version of datasets. Use s3fs.S3FileSystem instead.\n",
+            "  obj = super().__call__(*args, **kwargs)\n"
+          ]
+        }
+      ],
       "source": [
         "import datasets\n",
         "\n",
@@ -97,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "Ga-H9k4p69GU"
       },
@@ -122,9 +135,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "VbMwI8k3pMMa"
       },
       "outputs": [],
